--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -33,7 +31,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/gestao_financeira
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
-      JWT_SECRET: mySecretKey123456789012345678901234567890
+      JWT_SECRET: l5eQkTs9ugLCsQS5AhFX3+qePOyujluE/fnJyowkIrc=
+      ENCRYPTION_KEY: w3EPhm5P9f9GjQz9LXPMxWpoGUNiiKtSgZo9FVuWYyA=
     ports:
       - "8080:8080"
     depends_on:
@@ -44,7 +43,7 @@ services:
       - maven_cache:/root/.m2
     networks:
       - gestao-financeira-network
-    command: ["./mvnw", "spring-boot:run", "-Dspring-boot.run.jvmArguments=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"]
+    command: ["mvn", "spring-boot:run", "-Dspring-boot.run.jvmArguments=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"]
 
   # Frontend React Application
   frontend:
@@ -72,7 +71,7 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     ports:
-      - "5050:80"
+      - "5051:80"
     depends_on:
       - postgres
     volumes:
